--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,13 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/">Home</a>
+            <select>
+              <option value="volvo">Volvo</option>
+              <option value="saab">Saab</option>
+              <option value="mercedes">Mercedes</option>
+              <option value="audi">Audi</option>
+            </select>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
