--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,17 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Home</a>
+            <ul>
+              <li>
+                <a href="#">Topics</a>
+                <ul>
+                  <li><a href="#">Education</a></li>
+                  <li><a href="#">Language</a></li>
+                  <li><a href="#">Reading</a></li>
+                  <li><a href="#">Travels</a></li>
+                </ul>
+              </li>
+            </ul>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
