--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,24 +26,10 @@
             <p class="site-description">{{ site.description }}</p>
           </div>
 
-          <div class="menu-wrap">
-              <nav class="menu">
-                  <ul class="clearfix">
-                      <li><a href="{{ site.baseurl }}/">Home</a></li>
-                      <li>
-                          <a href="#">Topics <span class="arrow">&#9660;</span></a>
-
-                          <ul class="sub-menu">
-                              <li><a href="#">Education</a></li>
-                              <li><a href="#">Language</a></li>
-                              <li><a href="#">Reading</a></li>
-                              <li><a href="#">Travels</a></li>
-                          </ul>
-                      </li>
-                      <li><a href="{{ site.baseurl }}/about">About</a></li>
-                  </ul>
-              </nav>
-          </div>
+          <nav>
+            <a href="{{ site.baseurl }}/">Home</a>
+            <a href="{{ site.baseurl }}/about">About</a>
+          </nav>
         </header>
       </div>
     </div>
