--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,14 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Home</a>
+            <div class="dropdown">
+              <button class="dropbtn">Dropdown</button>
+              <div class="dropdown-content">
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+              </div>
+            </div>
             <a href="{{ site.baseurl }}/contact">Contact</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
