--- a/style.scss
+++ b/style.scss
@@ -286,13 +286,12 @@ footer {
 //CATEGORY DROPDOWN
 .dropbtn {
     background: transparent;
-    padding: 16px;
     font-size: 16px;
     border: none;
     font-weight: 300;
     letter-spacing: 1px;
 	font: 18px/1.4 $helvetica;
-	color: $gray;
+	color: #333;
 }
 
 .dropdown {
