--- a/style.scss
+++ b/style.scss
@@ -315,7 +315,7 @@ footer {
     display: block;
 }
 
-.dropdown-content a:hover {background-color: #fff}
+.dropdown-content a:hover {background-color: #eee}
 
 .dropdown:hover .dropdown-content {
     display: block;
