--- a/style.scss
+++ b/style.scss
@@ -285,6 +285,7 @@ footer {
 
 //CATEGORY DROPDOWN
 .dropbtn {
+	margin-left: 20px;
     background: transparent;
     font-size: 16px;
     border: none;
