--- a/style.scss
+++ b/style.scss
@@ -307,6 +307,7 @@ footer {
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 	background-color: #fff
+	
 }
 
 .dropdown-content a {
@@ -314,6 +315,7 @@ footer {
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+	margin-left: 0px;
 }
 
 .dropdown-content a:hover {background-color: #eee}
