--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,9 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Home</a>
+            <!-- <a href="{{ site.baseurl }}/">Home</a> -->
             <div class="dropdown">
-              <button class="dropbtn">Dropdown</button>
+              <button class="dropbtn">Categories</button>
               <div class="dropdown-content">
                 <a href="#">Link 1</a>
                 <a href="#">Link 2</a>
