--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,9 +31,9 @@
             <div class="dropdown">
               <button class="dropbtn">Categories</button>
               <div class="dropdown-content">
-                <a href="#">Link 1</a>
-                <a href="#">Link 2</a>
-                <a href="#">Link 3</a>
+                <a href="#">Education</a>
+                <a href="#">Languages</a>
+                <a href="#">Productivity</a>
               </div>
             </div>
             <a href="{{ site.baseurl }}/contact">Contact</a>
