--- a/style.scss
+++ b/style.scss
@@ -306,7 +306,7 @@ footer {
     position: absolute;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-	background-color: #fff
+	background-color: #fff;
 	min-width: 160px;
 	
 }
