--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,13 +27,33 @@
           </div>
 
           <nav>
+              {% assign rawcategories = "" %}
+                {% for post in site.posts %}
+                  {% assign ccategory = post.category | join:'|' | append:'|' %}
+                  {% assign rawcategories = rawcategories | append:ccategory %}
+                {% endfor %}
+              {% assign rawcategories = rawcategories | split:'|' | sort %}
+            
+              {% assign categories = "" %}
+              {% for category in rawcategories %}
+                {% if category != "" %}
+                  {% if categories == "" %}
+                    {% assign categories = category | split:'|' %}
+                  {% endif %}
+                  {% unless categories contains category %}
+                    {% assign tags = categories | join:'|' | append:'|' | append:category | split:'|' %}
+                  {% endunless %}
+                {% endif %}
+              {% endfor %}
+            
+            
             <!-- <a href="{{ site.baseurl }}/">Home</a> -->
             <div class="dropdown">
               <button class="dropbtn">Categories</button>
               <div class="dropdown-content">
-                <a href="#">Education</a>
-                <a href="#">Languages</a>
-                <a href="#">Productivity</a>
+                {% for tag in tags %}
+	                <a href="#{{ tag | slugify }}"> {{ tag }} </a>
+                {% endfor %}
               </div>
             </div>
             <a href="{{ site.baseurl }}/contact">Contact</a>
