--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,14 +28,7 @@
 
           <nav> 
             <!-- <a href="{{ site.baseurl }}/">Home</a> -->
-            <div class="dropdown">
-              <button class="dropbtn">Categories</button>
-              <div class="dropdown-content">
-                {% for tag in site.categories %}
-			<a href="#{{ tag[0] | slugify }}">{{ tag[0] }}</a>
-		{% endfor %}
-              </div>
-            </div>
+	    <a href="{{ site.baseurl }}/categories">Contact</a>
             <a href="{{ site.baseurl }}/contact">Contact</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
