--- a/style.scss
+++ b/style.scss
@@ -283,6 +283,14 @@ footer {
   text-align: center;
 }
 
+// CATEGORIES
+.post-tag:before {
+    content: "\f02b";
+    font-family: FontAwesome;
+    padding-right: .5em;
+}
+//
+
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
