--- a/style.scss
+++ b/style.scss
@@ -285,7 +285,7 @@ footer {
 
 // CATEGORIES
 .post-tag:before {
-    content: "\f02b";
+    content: "\f02c";
     font-family: FontAwesome;
     padding-right: .5em;
 }
