--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,9 @@
 
 @import "reset";
 @import "variables";
+
+$fa-font-path: "fonts/font-awesome/";
+@import 'font-awesome';
 // Syntax highlighting @import is at the bottom of this file
 
 /**************/
@@ -295,4 +298,3 @@ footer {
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
 @import "svg-icons";
-@import 'font-awesome';
