--- a/style.scss
+++ b/style.scss
@@ -4,9 +4,11 @@
 //
 // IMPORTS
 //
+$fa-font-path: "../fonts/font-awesome";
 
 @import "reset";
 @import "variables";
+@import "font-awesome/font-awesome";
 // Syntax highlighting @import is at the bottom of this file
 
 /**************/
