--- a/style.scss
+++ b/style.scss
@@ -4,11 +4,11 @@
 //
 // IMPORTS
 //
-$fa-font-path: "../fonts/font-awesome";
+$fa-font-path: "fonts/font-awesome";
 
 @import "reset";
 @import "variables";
-@import "font-awesome/font-awesome";
+@import "font-awesome";
 // Syntax highlighting @import is at the bottom of this file
 
 /**************/
