--- a/style.scss
+++ b/style.scss
@@ -283,11 +283,11 @@ footer {
 }
 
 // CATEGORIES
-//.post-tag:before {
-//    content: "\f02c";
-//    font-family: FontAwesome;
-//    padding-right: .5em;
-//}
+.post-tag:before {
+    content: "\f02c";
+    font-family: FontAwesome;
+    padding-right: .5em;
+}
 //
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
