--- a/style.scss
+++ b/style.scss
@@ -4,6 +4,7 @@
 //
 // IMPORTS
 //
+@import 'config';
 @import "reset";
 @import "variables";
 // Syntax highlighting @import is at the bottom of this file
