--- a/style.scss
+++ b/style.scss
@@ -4,7 +4,8 @@
 //
 // IMPORTS
 //
-@import 'config';
+$font-font-awesome: FontAwesome;
+
 @import "reset";
 @import "variables";
 // Syntax highlighting @import is at the bottom of this file
