--- a/style.scss
+++ b/style.scss
@@ -292,10 +292,9 @@ footer {
 
 .post-tag {
     display: inline-block;
-    background: red;//rgba(106,159,181,0.15);
+    background: rgba(106,159,181,0.15);
     padding: 0 .5rem;
     margin-right: .5rem;
-    border: 2px solid red;
     border-radius: 4px;
     color: #6a9fb5;
     font-family: "PT Sans",Helvetica,Arial,sans-serif;
