--- a/style.scss
+++ b/style.scss
@@ -303,6 +303,13 @@ footer {
     -moz-transition: all 0.1s ease-in-out;
     transition: all 0.1s ease-in-out;
 }
+
+.tags-expo .tags-expo-section ul li {
+    -webkit-transition: all 0.1s ease-in-out;
+    -moz-transition: all 0.1s ease-in-out;
+    transition: all 0.1s ease-in-out;
+    padding: 0 1rem;
+}
 //
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
