--- a/style.scss
+++ b/style.scss
@@ -292,7 +292,7 @@ footer {
 
 .post-tag {
     display: inline-block;
-    background: rgba(106,159,181,0.15);
+    background: red;//rgba(106,159,181,0.15);
     padding: 0 .5rem;
     margin-right: .5rem;
     border-radius: 4px;
