--- a/style.scss
+++ b/style.scss
@@ -292,11 +292,11 @@ footer {
 
 .post-tag {
     display: inline-block;
-    background: red;//rgba(106,159,181,0.15);
+    background: #fc4537;
     padding: 0 .5rem;
     margin-right: .5rem;
     border-radius: 4px;
-    color: #6a9fb5;
+    color: white;
     font-family: "PT Sans",Helvetica,Arial,sans-serif;
     font-size: 90%;
     -webkit-transition: all 0.1s ease-in-out;
