--- a/style.scss
+++ b/style.scss
@@ -304,8 +304,8 @@ footer {
     transition: all 0.1s ease-in-out;
 }
 
-.post-tag ::hover {
-	color: black;
+tags-expo-list a:hover {
+	color: #f46242;
 }
 //
 
