--- a/style.scss
+++ b/style.scss
@@ -304,8 +304,8 @@ footer {
     transition: all 0.1s ease-in-out;
 }
 
-post-tag a:hover {
-	color: #d8d8d6 !important;
+post-tag a{
+	color: #d8d8d6;
 }
 //
 
