--- a/style.scss
+++ b/style.scss
@@ -309,6 +309,10 @@ footer {
 }
 //
 
+.summary-thumbnail {  
+ 	border-radius: 50% !important
+ }
+
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
