--- a/style.scss
+++ b/style.scss
@@ -192,6 +192,7 @@ img {
 
 .site-name {
   margin: 0;
+  margin-bottom: 10px;
   color: $darkGray;
   cursor: pointer;
   font-family: $helveticaNeue;
