--- a/_layouts/other.html
+++ b/_layouts/other.html
@@ -23,10 +23,10 @@
           </div>
 
           <nav> 
-            <!-- <a href="{{ site.baseurl }}/">Home</a> -->
-	    <a href="{{ site.baseurl }}/categories">Categories</a>
-            <a href="{{ site.baseurl }}/contact">Contact</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a class="black-red-link" href="{{ site.baseurl }}/">Home</a>
+	    <a class="black-red-link" href="{{ site.baseurl }}/categories">Categories</a>
+            <a class="black-red-link" href="{{ site.baseurl }}/contact">Contact</a>
+            <a class="black-red-link" href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
       </div>
