--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,15 +18,15 @@
           <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
 
           <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
+            <h1 class="site-name"><a class="black-red-link" href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <p class="site-description">{{ site.description }}</p>
           </div>
 
           <nav> 
-            <!-- <a href="{{ site.baseurl }}/">Home</a> -->
-	    <a href="{{ site.baseurl }}/categories">Categories</a>
-            <a href="{{ site.baseurl }}/contact">Contact</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a class="black-red-link" href="{{ site.baseurl }}/">Home</a>
+	    <a class="black-red-link" href="{{ site.baseurl }}/categories">Categories</a>
+            <a class="black-red-link" href="{{ site.baseurl }}/contact">Contact</a>
+            <a class="black-red-link" href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
       </div>
