--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -9,7 +9,10 @@
   margin: 20px 0 20px 0;
   overflow: scroll;
   background-color: $darkGray !important;
-  color: white;
+}
+
+figure.highlight pre {
+    color: white;
 }
 
 pre {
