Improve + new post

--- a/style.scss
+++ b/style.scss
@@ -69,11 +69,11 @@ p {
 }
 
 a {
-  color: $blue;
+  color: red;
   text-decoration: none;
 	cursor: pointer;
   &:hover, &:active {
-    color: $blue;
+    color: red;
   }
 }
 
@@ -234,7 +234,7 @@ nav {
 
     @include mobile {
       margin: 0 10px;
-      color: $blue;
+      color: red;
     }
   }
 }
@@ -606,4 +606,12 @@ footer {
       }
     }
   }
+}
+
+.arrange-horizontally > * {
+  display: inline-block;
+  text-align: center;
+}
+.arrange-vertically > * {
+  display: block;
 }
