--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
     <link rel="icon"  type="image/png"    href="{{ site.avatar }}">
-    <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
+    <!-- <script src="//d3js.org/d3.v3.min.js"></script> -->
   </head>
 
   <body>
@@ -24,7 +24,7 @@
 
           <nav> 
             <a class="black-red-link" href="{{ site.baseurl }}/">Home</a>
-	    <a class="black-red-link" href="{{ site.baseurl }}/categories">Categories</a>
+	          <a class="black-red-link" href="{{ site.baseurl }}/categories">Categories</a>
             <a class="black-red-link" href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
@@ -34,13 +34,5 @@
     <div id="main" role="main" class="container">
       {{ content }}
     </div>
-    
-    <!-- <div class="wrapper-footer">
-	  <div class="container">
-	    <footer class="footer">
-	      {% include svg-icons.html %}
-	    </footer>
-	  </div>
-	</div> -->
   </body>
 </html>
