--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 
     {% include meta.html %}
 
+    <link href="https://techhub.social/@clementjean" rel="me">
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
     <link rel="icon"  type="image/png"    href="{{ site.avatar }}">
@@ -21,7 +22,7 @@
             <p class="site-description">{{ site.description }}</p>
           </div>
 
-          <nav> 
+          <nav>
             <a class="black-red-link" href="{{ site.baseurl }}/">Home</a>
 	          <a class="black-red-link" href="{{ site.baseurl }}/categories">Categories</a>
             <a class="black-red-link" href="{{ site.baseurl }}/about">About</a>
