--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,11 @@ layout: default
 ---
 
 <article class="post">
+
+  {% if page.image %}
+    <img src="{{- page.image | relative_url -}}" alt="" class="featured-image-post" />
+  {% endif %}
+
   <h1>{{ page.title }}</h1>
 
   <div class="entry">
