Add hire me page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@ layout: compress
           <nav>
             <a class="black-red-link" href="{{ site.baseurl }}/">Home</a>
 	          <a class="black-red-link" href="{{ site.baseurl }}/categories">Categories</a>
+            <a class="black-red-link" href="{{ site.baseurl }}/hire_me">Hire Me</a>
             <a class="black-red-link" href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
