--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,14 +12,14 @@ layout: compress
     <link href="https://techhub.social/@clementjean" rel="me">
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
-    <link rel="icon"  type="image/png"    href="{{ site.avatar }}">
+    <link rel="icon" type="image/png" href="{{ site.avatar }}">
   </head>
 
   <body>
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
+          <a href="{{ site.baseurl }}/" aria-label="Home" class="site-avatar"><img src="{{ site.avatar }}" alt="Clement Jean" width="80" height="70"/></a>
 
           <div class="site-info">
             <h1 class="site-name"><a class="black-red-link" href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
