chore: remove analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,9 @@ layout: compress
 
     {% include meta.html %}
 
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/css/code.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/normalize.css"/>
     <link href="https://techhub.social/@clementjean" rel="me">
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
@@ -48,6 +51,6 @@ layout: compress
       </div>
     </div>
 
-    {% include analytics.html %}
+    <script type="text/javascript" src="/js/codetabs.js"></script>
   </body>
 </html>
