better css build

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,11 +9,11 @@ layout: compress
 
     {% include meta.html %}
 
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="/css/code.css"/>
-    <link rel="stylesheet" type="text/css" href="/css/normalize.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/org-style.css" />
+    <link rel="stylesheet" type="text/css" href="/css/org-code.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/org-normalize.css"/>
     <link href="https://techhub.social/@clementjean" rel="me">
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
     <link rel="icon" type="image/png" href="{{ site.avatar }}">
   </head>
