style: remove outline on button focus

--- a/css/org-style.css
+++ b/css/org-style.css
@@ -107,6 +107,10 @@ body.dark-mode {
     outline: none;
 }
 
+.tab-controls button:focus {
+    outline: none;
+}
+
 .tab-content {
     position: relative;
     display: none;
