--- a/css/org-style.css
+++ b/css/org-style.css
@@ -20,6 +20,14 @@ body.dark-mode {
     --code-text-color: #f0f0f0;
 }
 
+.outline-1 {
+    margin: 20px 0px;
+}
+
+.outline-2, .outline-3, .outline-4 {
+    margin: 20px 10px;
+}
+
 .tab-content pre.src:before {
     color: unset !important;
     background-color: unset !important;
@@ -56,14 +64,14 @@ body.dark-mode {
     border-radius: 0px 0px 8px 8px;
     margin: 0px;
     line-height: 2;
-    color: #333;
-    background-color: #eee;
+    color: #343b59;
+    background-color: #e6e7ed;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .tab-content pre.dark-mode {
-    background-color: rgb(39, 40, 34);
-    color: #f0f0f0;
+    background-color: #1a1b26;
+    color: #a9b1d6;
     border-color: #444;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
@@ -79,31 +87,45 @@ body.dark-mode {
 }
 
 .tab-controls {
+    --active-indicator-offset: auto;
+    --active-indicator-width: 10px;
+
+    position: relative;
     display: flex;
     padding-left: 20px;
+}
+
+.tab-controls::after {
+    position: absolute;
+    content: "";
+    width: var(--active-indicator-width);
+    height: 3px;
+    background-color: #1769e0;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+    left: var(--active-indicator-offset);
+    bottom: 0px;
+    transition: left 300ms, width 300ms;
 }
 
 .tab-controls button {
     font-size: 15px;
     margin-right: 10px;
-    padding: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     cursor: pointer;
     border: none;
     background-color: transparent;
     transition: background-color 0.3s ease;
+    text-align: center;
 }
 
 .tab-controls button:last-child {
     border-right: none;
 }
 
-.tab-controls button:hover {
-    border-bottom: 3px solid #bcbcbc;
-}
-
 .tab-controls button.active {
     color: #1769e0;
-    border-bottom: 3px solid #1769e0;
     outline: none;
 }
 
@@ -114,7 +136,6 @@ body.dark-mode {
 .tab-content {
     position: relative;
     display: none;
-    border-top: 1px solid #ccc;
 }
 
 .tab-content.active {
@@ -134,6 +155,21 @@ body.dark-mode {
 
 .tab-content pre .theme-toggle-icon::before {
     content: url('/images/icon_theme.svg');
+}
+
+.tab-content pre .copy-icon {
+    line-height: 1;
+    position: absolute;
+    top: 10px;
+    right: 35px;
+    color: var(--tab-bg);
+    cursor: pointer;
+    z-index: 2;
+    transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
+}
+
+.tab-content pre .copy-icon::after {
+    content: url('/images/icon_copy.svg');
 }
 
 .tab-content pre.dark-mode .theme-toggle-icon::before {
