--- a/css/org-normalize.css
+++ b/css/org-normalize.css
@@ -31,11 +31,14 @@ body {
  */
 
 article,
-details,
+aside,
+details, /* 1 */
+figcaption,
 figure,
 footer,
 header,
-main,
+main, /* 2 */
+menu,
 nav,
 section,
 summary { /* 1 */
@@ -46,7 +49,9 @@ summary { /* 1 */
  * Add the correct display in IE 9-.
  */
 
-
+audio,
+canvas,
+progress,
 video {
   display: inline-block;
 }
@@ -55,16 +60,26 @@ video {
  * Add the correct display in iOS 4-7.
  */
 
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
+
 /**
  * Add the correct vertical alignment in Chrome, Firefox, and Opera.
  */
+
+progress {
+  vertical-align: baseline;
+}
 
 /**
  * Add the correct display in IE 10-.
  * 1. Add the correct display in IE.
  */
 
-template {
+template, /* 1 */
+[hidden] {
   display: none;
 }
 
@@ -99,6 +114,12 @@ a:hover {
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
  */
 
+abbr[title] {
+  border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
+  text-decoration: underline dotted; /* 2 */
+}
+
 /**
  * Prevent the duplicate application of `bolder` by the next rule in Safari 6.
  */
@@ -120,6 +141,10 @@ strong {
 /**
  * Add the correct font style in Android 4.3-.
  */
+
+dfn {
+  font-style: italic;
+}
 
 /**
  * Correct the font size and margin on `h1` elements within `section` and
@@ -153,6 +178,22 @@ small {
  * all browsers.
  */
 
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
 /* Embedded content
    ========================================================================== */
 
@@ -181,7 +222,9 @@ svg:not(:root) {
  */
 
 code,
-pre {
+kbd,
+pre,
+samp {
   font-family: monospace, monospace; /* 1 */
   font-size: 1em; /* 2 */
 }
@@ -215,7 +258,9 @@ hr {
 
 button,
 input,
-select {
+optgroup,
+select,
+textarea {
   font: inherit; /* 1 */
   margin: 0; /* 2 */
 }
@@ -223,6 +268,10 @@ select {
 /**
  * Restore the font weight unset by the previous rule.
  */
+
+optgroup {
+  font-weight: bold;
+}
 
 /**
  * Show the overflow in IE.
@@ -251,8 +300,9 @@ select { /* 1 */
  */
 
 button,
-html [type="button"], 
-[type="reset"] {
+html [type="button"], /* 1 */
+[type="reset"],
+[type="submit"] {
   -webkit-appearance: button; /* 2 */
 }
 
@@ -262,7 +312,8 @@ html [type="button"],
 
 button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner {
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
@@ -273,13 +324,20 @@ button::-moz-focus-inner,
 
 button:-moz-focusring,
 [type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring {
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
 /**
  * Change the border, margin, and padding in all browsers (opinionated).
  */
+
+fieldset {
+  border: 1px solid #c0c0c0;
+  margin: 0 2px;
+  padding: 0.35em 0.625em 0.75em;
+}
 
 /**
  * 1. Correct the text wrapping in Edge and IE.
@@ -288,14 +346,33 @@ button:-moz-focusring,
  *    `fieldset` elements in all browsers.
  */
 
+legend {
+  box-sizing: border-box; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
+  max-width: 100%; /* 1 */
+  padding: 0; /* 3 */
+  white-space: normal; /* 1 */
+}
+
 /**
  * Remove the default vertical scrollbar in IE.
  */
+
+textarea {
+  overflow: auto;
+}
 
 /**
  * 1. Add the correct box sizing in IE 10-.
  * 2. Remove the padding in IE 10-.
  */
+
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
+}
 
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
